--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
     <artifactId>commons-io</artifactId>
     <version>1.3.2</version>
 </dependency>
+<dependency>
+			<groupId>com.relevantcodes</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>2.41.2</version>
+		</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
